# healthpoint-rs

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  conductor.json  deny.toml  glama.json  justfile  renovate.json  server.json  smithery.yaml  workflow.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  fhir-mapping-gap.yml  licensing-review.yml  live-api-contract.yml
.github/workflows/: ci.yml  docs-links.yml  live-smoke.yml  mcp-registry-submission.yml  mock-server.yml  release.yml  secret-scan.yml  smithery-compliance.yml
conductor/: brief.md  state.json  tracks.md
conductor/checkpoints/: 2026-06-29-environment-limit.md  2026-06-29-interim-hardening.md  2026-06-29-spike-1.md  2026-06-29-spike-2.md  2026-06-30-bleeding-edge-hardening.md  2026-06-30-crates-io-release-published.md  2026-06-30-dependabot-msrv-policy.md  2026-06-30-fhir-mapping-decision.md  2026-06-30-glama-repo-metadata.md  2026-06-30-glama-score-gap.md  2026-06-30-live-validation-closeout.md  2026-06-30-local-setup-validated.md  2026-06-30-mcp-registry-oci-ghcr-visibility.md  2026-06-30-official-mcp-registry-published.md  2026-06-30-open-social-data-decision.md  2026-06-30-pulsemcp-manual-gate.md  2026-06-30-release-distribution-external-gates.md  2026-06-30-release-publication-automation.md  2026-06-30-release-readiness-mcp-contracts.md  2026-06-30-release-registry-closeout.md  2026-06-30-repo-closeout.md  2026-06-30-smithery-100-remediation.md  2026-06-30-smithery-compliance-hardening.md  2026-06-30-smithery-glama-closeout.md  2026-06-30-third-party-registry-blockers.md
conductor/decisions/: 0001-new-repo-domain-sdk.md  0002-fhir-first.md  0003-licensed-data-boundary.md  0004-open-social-data-adapter.md  0005-rmcp-main.md  0006-resource-uri-contract.md  0007-json-schema-contracts.md  0008-tolerant-json-fhir-mapping.md  0009-string-row-open-social-data-bridge.md
conductor/tracks/: 01-workspace-foundation.md  02-access-licensing.md  03-fhir-mapping.md  04-cli.md  05-mcp.md  06-open-social-data.md  07-live-validation.md  08-release-distribution.md  README.md
conductor/tracks/smithery_compliance_20260630/: index.md  metadata.json  plan.md  spec.md
contracts/: README.md
contracts/schemas/: README.md  access-policy.schema.json  export-manifest.schema.json  location-record.schema.json  mcp-tools.schema.json  organization-record.schema.json  resource-uri.schema.json  service-query.schema.json  service-record.schema.json
crates/healthpoint-cli/: Cargo.toml
crates/healthpoint-cli/src/: main.rs
crates/healthpoint-client/: Cargo.toml
crates/healthpoint-client/src/: lib.rs
crates/healthpoint-core/: Cargo.toml
crates/healthpoint-core/src/: access.rs  error.rs  lib.rs  page.rs  provenance.rs  query.rs  records.rs  redaction.rs  resource_uri.rs  traits.rs  validation.rs
crates/healthpoint-export/: Cargo.toml
crates/healthpoint-export/src/: lib.rs
crates/healthpoint-fhir/: Cargo.toml
crates/healthpoint-fhir/src/: lib.rs
crates/healthpoint-mcp/: Cargo.toml
crates/healthpoint-mcp/src/: main.rs
crates/healthpoint-osd-adapter/: Cargo.toml
crates/healthpoint-osd-adapter/src/: lib.rs
crates/healthpoint-testkit/: Cargo.toml
crates/healthpoint-testkit/fixtures/: fhir-bundle-healthcare-service.json  fhir-location.json  fhir-organization.json
crates/healthpoint-testkit/src/: lib.rs
docs/: access-and-licensing.md  api-assumptions.md  cli.md  conductor.md  data-export-policy.md  development-environment.md  environment-limitations.md  fhir-mapping.md  healthpoint-api-access.md  healthpoint-license-notes.md  healthpoint-portal-reference.md  integration-roadmap.md  live-contract-capture.md  live-validation.md  mcp-packaging.md  mcp-registry-submissions.md  mcp-tools.md  mock-server.md  open-social-data-adapter.md  open-social-data-view-dictionaries.md  release-provenance.md  release-readiness.md  release-runbook.md  resource-uris.md  rmcp-pin-plan.md  sbom-and-attestations.md  schemas.md  smithery-compliance-contract.md  smithery-compliance-playbook.md  static-preflight.md  threat-model.md
docs/integrations/: mcp-client-configs.md  mcp-registry-readiness.md
examples/http/: README.md  healthcare-service-search-response.json  location-read-response.json  organization-read-response.json
examples/mcp/: claude_desktop_config.json
examples/queries/: cervical-screening.toml  nearby-auckland.toml
packaging/mcpb/: README.md  manifest-metadata.json
policy/: healthpoint-access.toml
script/: server
scripts/: check-mcp-registry-submission.py  check-release-version.py  check-smithery-compliance.py  generate-contract-schemas.py  package-mcpb  static-preflight.py  validate-mcp-server
