[package]
name = "healthpoint-client"
version.workspace = true
description = "Async HTTP client for licensed Healthpoint API access."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
healthpoint-core.workspace = true
healthpoint-fhir.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
