[package]
name = "healthpoint-core"
version.workspace = true
description = "Core domain model, queries, provenance, and provider traits for Healthpoint tooling."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
