[package]
name = "healthpoint-export"
version = "0.1.0"
description = "Export helpers and provenance manifests for Healthpoint records."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
csv.workspace = true
healthpoint-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
