[package]
name = "healthpoint-mcp"
version.workspace = true
description = "Read-only MCP server for Healthpoint directory access."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "healthpoint-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
healthpoint-client.workspace = true
healthpoint-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
