[package]
name = "healthpoint-osd-adapter"
version.workspace = true
description = "Future open_social_data bridge for Healthpoint tabular views."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
healthpoint-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[dev-dependencies]
healthpoint-fhir.workspace = true
healthpoint-testkit.workspace = true
