[package]
name = "healthpoint-testkit"
version = "0.1.0"
description = "Synthetic fixtures and test helpers for healthpoint-rs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde_json.workspace = true

[lints]
workspace = true
