[package]
name = "healthpoint-testkit"
version.workspace = true
description = "Synthetic fixtures and test helpers for healthpoint-rs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
healthpoint-core.workspace = true
healthpoint-fhir.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
